--- a/srcFiles/index.html
+++ b/srcFiles/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta name="keywords" content="Калькулятор">
-	<meta name="description" content="Web Calc">
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Web Calc</title>
-	<link rel="stylesheet" href="/srcFiles/style.css">
-</head>
-<body>
-	
-	<script src="/srcFiles/index.js"></script>
-</body>
+  <head>
+    <meta name="keywords" content="Калькулятор" />
+    <meta name="description" content="Web Calc" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Calc</title>
+    <link rel="stylesheet" href="/srcFiles/style.css" />
+  </head>
+  <body>
+    <header class="header">
+		<div class="container">
+      <div class="screan">
+			<p>0</p>
+
+		</div>
+      </div>
+    </header>
+
+	<main class="main">
+		<div class="container">
+		<div class="buttons">
+			<div class=" btn numbers-item">7</div>
+			<div class=" btn numbers-item">8</div>
+			<div class=" btn numbers-item">9</div>
+			<div class=" btn numbers-item">4</div>
+			<div class=" btn numbers-item">5</div>
+			<div class=" btn numbers-item">6</div>
+			<div class=" btn numbers-item">3</div>
+			<div class=" btn numbers-item">2</div>
+			<div class=" btn numbers-item">1</div>
+			<div class=" btn numbers-item">0</div>
+			<div class="bnt operations-value">/</div>
+			<div class="bnt operations-value">x</div>
+			<div class="bnt operations-value">+</div>
+			<div class="bnt operations-value">-</div>
+			<div class="bnt operations-value">=</div>
+			<div class="bnt operations-value ac">ac</div>
+
+		</div>
+	</main>
+
+	<footer>
+
+
+	</footer>
+
+    <script src="/srcFiles/index.js"></script>
+  </body>
 </html>
